i just added 2 par

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 <body>
     <h1>git test</h1>
     <h2>my git push</h2>
+
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus reiciendis nostrum culpa quo earum ipsam fuga incidunt natus impedit? Error fugit fugiat, numquam porro corporis sapiente reiciendis placeat incidunt officia?</p>
+
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum, blanditiis voluptates! Necessitatibus commodi molestias autem sunt culpa ipsam laboriosam porro qui nesciunt maiores possimus dolorum, quo ratione molestiae consectetur vel?s</p>
     
 </body>
 </html>
